appium: move native runners into app modules